--- a/src/relatorios/funcionarios.jrxml
+++ b/src/relatorios/funcionarios.jrxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.21.3.final using JasperReports Library version 6.21.3-4a3078d20785ebe464f18037d738d12fc98c13cf  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="funcionarios" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="e59d46c0-3ab0-4ec7-bc7b-cac7af611a56">
-	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
+	<property name="com.jaspersoft.studio.data.sql.tables" value="bWVjYW5pY29zICwxNSwxNSwzYWMxNjNhMS0wMzhkLTQzMTAtYmY4OS04ZDEzNmI4NDNjYTg7"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="conexao.jrdax"/>
+	<parameter name="P_id" class="java.lang.Integer"/>
 	<queryString language="SQL">
-		<![CDATA[Select * from mecanicos;]]>
+		<![CDATA[SELECT *
+FROM mecanicos
+WHERE 
+	 mecanicos.id = $P{P_id}]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer">
 		<property name="com.jaspersoft.studio.field.name" value="id"/>
@@ -91,7 +95,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="7eeb79e3-ceeb-4cda-a916-702d0f71befb"/>
 				</reportElement>
 				<textElement>
-					<font fontName="Franklin Gothic Medium" size="14" isBold="false"/>
+					<font fontName="Arial" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[id]]></text>
 			</staticText>
@@ -100,7 +104,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="987499a4-40c2-4fb4-a54e-7ad5759db21a"/>
 				</reportElement>
 				<textElement>
-					<font fontName="Franklin Gothic Medium" size="14" isBold="false"/>
+					<font fontName="Arial" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[nome]]></text>
 			</staticText>
@@ -109,7 +113,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="de21c9f5-38c1-47f9-b058-7e3b3a649426"/>
 				</reportElement>
 				<textElement>
-					<font fontName="Franklin Gothic Medium" size="14" isBold="false"/>
+					<font fontName="Arial" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[endereco]]></text>
 			</staticText>
@@ -118,7 +122,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a0eeaf27-e310-4466-988d-79fe20dd3d9a"/>
 				</reportElement>
 				<textElement>
-					<font fontName="Franklin Gothic Medium" size="14" isBold="false"/>
+					<font fontName="Arial" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[telefone]]></text>
 			</staticText>
@@ -127,7 +131,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="44a088e9-4cd4-4ee3-9e38-ead8b53e3521"/>
 				</reportElement>
 				<textElement>
-					<font fontName="Franklin Gothic Medium" size="14" isBold="false"/>
+					<font fontName="Arial" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[especialidade]]></text>
 			</staticText>
@@ -136,7 +140,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="eae80c11-2296-4f73-858e-92f00ddaf5f0"/>
 				</reportElement>
 				<textElement>
-					<font fontName="Franklin Gothic Medium" size="14" isBold="false"/>
+					<font fontName="Arial" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Data de registro]]></text>
 			</staticText>
@@ -155,7 +159,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="7eeb79e3-ceeb-4cda-a916-702d0f71befb"/>
 				</reportElement>
 				<textElement>
-					<font fontName="DejaVu Serif Condensed" size="12" isBold="false"/>
+					<font fontName="Arial" size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
 			</textField>
@@ -164,7 +168,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="987499a4-40c2-4fb4-a54e-7ad5759db21a"/>
 				</reportElement>
 				<textElement>
-					<font fontName="DejaVu Serif Condensed" size="12" isBold="false"/>
+					<font fontName="Arial" size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
 			</textField>
@@ -173,7 +177,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="de21c9f5-38c1-47f9-b058-7e3b3a649426"/>
 				</reportElement>
 				<textElement>
-					<font fontName="DejaVu Serif Condensed" size="12" isBold="false"/>
+					<font fontName="Arial" size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{endereco}]]></textFieldExpression>
 			</textField>
@@ -182,7 +186,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a0eeaf27-e310-4466-988d-79fe20dd3d9a"/>
 				</reportElement>
 				<textElement>
-					<font fontName="DejaVu Serif Condensed" size="12" isBold="false"/>
+					<font fontName="Arial" size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{telefone}]]></textFieldExpression>
 			</textField>
@@ -191,7 +195,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="44a088e9-4cd4-4ee3-9e38-ead8b53e3521"/>
 				</reportElement>
 				<textElement>
-					<font fontName="DejaVu Serif Condensed" size="12" isBold="false"/>
+					<font fontName="Arial" size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{especialidade}]]></textFieldExpression>
 			</textField>
@@ -200,7 +204,7 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="eae80c11-2296-4f73-858e-92f00ddaf5f0"/>
 				</reportElement>
 				<textElement>
-					<font fontName="DejaVu Serif Condensed" size="12" isBold="false"/>
+					<font fontName="Arial" size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{data}]]></textFieldExpression>
 			</textField>
