--- a/src/relatorios/rcb.jrxml
+++ b/src/relatorios/rcb.jrxml
@@ -201,7 +201,7 @@
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="conexao.jrdax"/>
 		<parameter name="idd_p" class="java.lang.Integer"/>
 		<queryString language="SQL">
-			<![CDATA[select * from ordem_servico where id =  $P{idd_p} ]]>
+			<![CDATA[select * from ordem_servico where id =  $P{idd_p}]]>
 		</queryString>
 		<field name="id" class="java.lang.Integer">
 			<property name="com.jaspersoft.studio.field.name" value="id"/>
@@ -276,7 +276,7 @@
 	</subDataset>
 	<parameter name="P_idd" class="java.lang.Integer"/>
 	<queryString language="SQL">
-		<![CDATA[select * from ordem_servico where id =  $P{P_idd} ]]>
+		<![CDATA[select * from ordem_servico where id =  $P{P_idd}]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer">
 		<property name="com.jaspersoft.studio.field.name" value="id"/>
@@ -367,7 +367,7 @@
 				</reportElement>
 			</line>
 			<staticText>
-				<reportElement x="0" y="150" width="80" height="15" uuid="1d3045ed-03d6-4253-a959-aeeb491b73ca"/>
+				<reportElement x="0" y="150" width="70" height="15" uuid="1d3045ed-03d6-4253-a959-aeeb491b73ca"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
@@ -385,7 +385,10 @@
 			</staticText>
 			<staticText>
 				<reportElement x="410" y="150" width="120" height="15" uuid="dd52166a-1135-4931-adef-51e7972118bc"/>
-				<text><![CDATA[Ship state 2]]></text>
+				<textElement>
+					<font isBold="true" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Dados da fatura:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="415" y="10" width="50" height="20" uuid="0f86baff-6386-4f3f-b3fe-2388707babe8"/>
@@ -413,7 +416,7 @@
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement>
-					<font size="19" isBold="true"/>
+					<font size="19" isBold="true" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[AUTO_DUMAS_LMTD]]></text>
 			</staticText>
@@ -427,7 +430,7 @@
 			</staticText>
 			<staticText>
 				<reportElement x="10" y="45" width="205" height="15" uuid="b96f7183-44f8-43ad-ba60-43d8fbf50b6e"/>
-				<text><![CDATA[City, street, ZIP code]]></text>
+				<text><![CDATA[Matola, Rua da esquadra]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="0" y="120" width="100" height="23" uuid="51d12668-6918-45eb-b8e4-ad8048c43476"/>
@@ -438,7 +441,7 @@
 				<textFieldExpression><![CDATA[$F{dataFechamento}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="90" y="151" width="100" height="13" uuid="c2c037c8-d4a4-4414-b6bd-3132c9198e4b"/>
+				<reportElement x="70" y="150" width="100" height="13" uuid="c2c037c8-d4a4-4414-b6bd-3132c9198e4b"/>
 				<textFieldExpression><![CDATA[$F{nomeMecanico}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -447,7 +450,7 @@
 		<band height="12"/>
 	</columnHeader>
 	<detail>
-		<band height="161">
+		<band height="157">
 			<componentElement>
 				<reportElement x="0" y="10" width="556" height="140" uuid="47ef7d87-0e66-4508-97d8-932747f73c48">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
@@ -464,11 +467,14 @@
 					</datasetRun>
 					<jr:column width="40" uuid="2edad424-ad7f-41ec-aa32-5ffcbe70c908">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
-						<jr:tableHeader style="Table 1_TH" height="30" rowSpan="1"/>
-						<jr:tableFooter style="Table 1_TH" height="40" rowSpan="1"/>
+						<jr:tableHeader style="Table 1_TH" height="2" rowSpan="1"/>
+						<jr:tableFooter style="Table 1_TH" height="2" rowSpan="1"/>
 						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="40" height="30" uuid="0cc63663-5d5d-4ec4-b907-b15f9edb751e"/>
+								<textElement textAlignment="Center">
+									<font isBold="true"/>
+								</textElement>
 								<text><![CDATA[id]]></text>
 							</staticText>
 						</jr:columnHeader>
@@ -481,12 +487,15 @@
 					</jr:column>
 					<jr:column width="80" uuid="ae3d6310-5d51-4d70-8028-e161ef403468">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
-						<jr:tableHeader style="Table 1_TH" height="30" rowSpan="1"/>
-						<jr:tableFooter style="Table 1_TH" height="40" rowSpan="1"/>
+						<jr:tableHeader style="Table 1_TH" height="2" rowSpan="1"/>
+						<jr:tableFooter style="Table 1_TH" height="2" rowSpan="1"/>
 						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="80" height="30" uuid="6e0b3308-7429-4bf1-8792-70d714ecd005"/>
-								<text><![CDATA[nomeCliente]]></text>
+								<textElement textAlignment="Center">
+									<font isBold="true"/>
+								</textElement>
+								<text><![CDATA[Cliente]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table 1_TD" height="30">
@@ -498,12 +507,15 @@
 					</jr:column>
 					<jr:column width="80" uuid="e1a8192b-da7a-451e-b27b-501522731f89">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
-						<jr:tableHeader style="Table 1_TH" height="30" rowSpan="1"/>
-						<jr:tableFooter style="Table 1_TH" height="40" rowSpan="1"/>
+						<jr:tableHeader style="Table 1_TH" height="2" rowSpan="1"/>
+						<jr:tableFooter style="Table 1_TH" height="2" rowSpan="1"/>
 						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="80" height="30" uuid="ec7514a2-ec9f-470f-977d-dbd3c7ab83ea"/>
-								<text><![CDATA[matriculaVeiculo]]></text>
+								<textElement textAlignment="Center">
+									<font isBold="true"/>
+								</textElement>
+								<text><![CDATA[Matricula]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table 1_TD" height="30">
@@ -515,11 +527,14 @@
 					</jr:column>
 					<jr:column width="160" uuid="5cb6ca9e-4e19-4963-92bb-803d4183ee08">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column4"/>
-						<jr:tableHeader style="Table 1_TH" height="30" rowSpan="1"/>
-						<jr:tableFooter style="Table 1_TH" height="40" rowSpan="1"/>
+						<jr:tableHeader style="Table 1_TH" height="2" rowSpan="1"/>
+						<jr:tableFooter style="Table 1_TH" height="2" rowSpan="1"/>
 						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="160" height="30" uuid="2ca4c7ef-7e8b-4205-bcfb-380c13ab0396"/>
+								<textElement textAlignment="Center">
+									<font isBold="true"/>
+								</textElement>
 								<text><![CDATA[problema]]></text>
 							</staticText>
 						</jr:columnHeader>
@@ -532,11 +547,14 @@
 					</jr:column>
 					<jr:column width="140" uuid="1f5dcb83-4de4-4195-9af4-52aa4d80e65d">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column5"/>
-						<jr:tableHeader style="Table 1_TH" height="30" rowSpan="1"/>
-						<jr:tableFooter style="Table 1_TH" height="40" rowSpan="1"/>
+						<jr:tableHeader style="Table 1_TH" height="2" rowSpan="1"/>
+						<jr:tableFooter style="Table 1_TH" height="2" rowSpan="1"/>
 						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="140" height="30" uuid="2ec5cdf9-dca0-4427-b58e-3d3febe5a79a"/>
+								<textElement textAlignment="Center">
+									<font isBold="true"/>
+								</textElement>
 								<text><![CDATA[servico]]></text>
 							</staticText>
 						</jr:columnHeader>
@@ -549,11 +567,14 @@
 					</jr:column>
 					<jr:column width="50" uuid="8f3803ae-93dc-401a-96a6-ab8e4e1c86f2">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column6"/>
-						<jr:tableHeader style="Table 1_TH" height="30" rowSpan="1"/>
-						<jr:tableFooter style="Table 1_TH" height="40" rowSpan="1"/>
+						<jr:tableHeader style="Table 1_TH" height="2" rowSpan="1"/>
+						<jr:tableFooter style="Table 1_TH" height="2" rowSpan="1"/>
 						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
 							<staticText>
 								<reportElement x="0" y="0" width="50" height="30" uuid="2adb40f4-b8b9-458b-b391-56ddc6345d7b"/>
+								<textElement textAlignment="Center">
+									<font isBold="true"/>
+								</textElement>
 								<text><![CDATA[status]]></text>
 							</staticText>
 						</jr:columnHeader>
@@ -571,7 +592,7 @@
 	<lastPageFooter>
 		<band height="177">
 			<staticText>
-				<reportElement positionType="Float" x="-1" y="30" width="261" height="90" uuid="1a0d7088-5af7-4865-8be1-41ec5f51fb36"/>
+				<reportElement positionType="Float" x="-1" y="30" width="301" height="90" uuid="1a0d7088-5af7-4865-8be1-41ec5f51fb36"/>
 				<box>
 					<topPen lineWidth="1.1" lineStyle="Dashed"/>
 					<leftPen lineWidth="1.1" lineStyle="Dashed"/>
@@ -586,6 +607,20 @@
 					<font fontName="Serif" size="9" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[OBRIGADO PELA CONFIANÇA]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="60" y="10" width="100" height="20" uuid="459d9dd3-ea2e-4edd-ad3a-bfec8844549e"/>
+				<textElement>
+					<font fontName="Times New Roman" size="14" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{precoTotal}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="0" y="10" width="60" height="20" uuid="0b4635ae-38ec-4bab-bc2f-92f5a52703aa"/>
+				<textElement>
+					<font fontName="Times New Roman" size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[TOTAL:]]></text>
 			</staticText>
 		</band>
 	</lastPageFooter>
